# mcr_srvs

./: README.md  docker-compose.yml  pyproject.toml
microservices/order-service/: Dockerfile
microservices/order-service/app/: database.py  main.py  models.py  service.py
microservices/order-service/app/proto/: order.proto  order_pb2.py  order_pb2_grpc.py
microservices/order-service/proto/: order.proto
microservices/user-service/: requirements.txt
microservices/user-service/app/: main.py  models.py  service.py
microservices/user-service/app/proto/: user.proto  user_pb2.py  user_pb2_grpc.py
microservices/user-service/proto/: user.proto
