[tool.poetry]
name = "mcr-svrs"
version = "0.1.0"
description = "Microservices gRPC"
authors = ["jhonimnemonik <140925170+jhonimnemonik@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.64.1"
grpcio-tools = "^1.64.1"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false